# taxbot

./: .env.example  AGENT.md  api.py  chromadb_setup.py  data_cleaning.py  frontend_prompt.md  generate_embeddings.py  main.py  pyproject.toml  render.yaml  taxbot.py  taxbot_skill.md  text_chunking.py
data/: chunked_dataset.csv  cleaned_dataset.csv  embedded_chunks.json
data/chroma_db/: chroma.sqlite3
taxbot-frontend/: .env.example  .gitignore  README.md  index.html  package.json  tailwind.config.js  vercel.json
taxbot-frontend/src/: App.jsx  index.css
taxbot-frontend/src/components/: ChatWindow.jsx  Header.jsx  InputBar.jsx  MessageBubble.jsx  TypingIndicator.jsx  WelcomeBanner.jsx
taxbot-frontend/src/hooks/: useChat.js
taxbot-frontend/src/utils/: api.js
