[project]
name = "tax-bot"
version = "0.1.0"
description = "GRA TaxBot — AI tax assistant for Ghana's tax system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pandas>=2.0.0",
    "sentence-transformers>=2.2.0",
    "chromadb>=0.4.0",
    "slowapi>=0.1.9",
]
